--- a/Realisation/composer.json
+++ b/Realisation/composer.json
@@ -25,9 +25,14 @@
     "autoload": {
         "psr-4": {
             "App\\": "app/",
+            "Modules\\": "modules/",
             "Database\\Factories\\": "database/factories/",
             "Database\\Seeders\\": "database/seeders/"
-        }
+        },
+        "files": [
+            "app/helpers/ModulesHelpers.php",
+            "app/helpers/TranslationHelper.php"
+    ]
     },
     "autoload-dev": {
         "psr-4": {
