--- a/Realisation/composer.json
+++ b/Realisation/composer.json
@@ -27,7 +27,7 @@
             "App\\": "app/",
             "Database\\Factories\\": "database/factories/",
             "Database\\Seeders\\": "database/seeders/",
-            "Modules\\Blog\\": "modules/Blog"
+            "Modules\\": "modules/"
         }
     },
     "autoload-dev": {
